--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,34 @@
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
 
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-/dist
-/dist-ssr
 
 # misc
 .DS_Store
-*.pem
 .vscode/*
 !.vscode/extensions.json
-.idea
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+local_settings.py
 
 # log & debug 
 logs
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+pip-log.txt
+pip-delete-this-directory.txt
 
 # local env files
 .env*.local
 .env
 *.local
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
 
 # prisma
 prisma/migrations/*
+
+# PyCharm
+.idea/
